# learning_rust

./: Cargo.toml
session_1/authentication/: Cargo.toml
session_1/authentication/src/: lib.rs
session_1/login/src/: main.rs
session_1/login_manager/: Cargo.toml
session_1/login_manager/src/: main.rs
session_1/memory_semantics/: Cargo.toml
session_1/memory_semantics/src/: main.rs
session_1/text_input/: Cargo.toml
session_1/text_input/src/: main.rs
session_1/variables/src/: main.rs
session_2/atomic/src/: main.rs
session_2/channels1/src/: main.rs
session_2/dashing/: Cargo.toml
session_2/dashing/src/: main.rs
session_2/deadlock/src/: main.rs
session_2/divide_work/src/: main.rs
session_2/hello_thread/src/: main.rs
session_2/mutexes/src/: main.rs
session_2/rwlocks/: Cargo.toml
session_2/rwlocks/src/: main.rs
session_2/scoped_threads/src/: main.rs
session_2/thread_builder/src/: main.rs
session_3/blocking/: Cargo.toml
session_3/blocking/src/: main.rs
session_3/db_access/: Cargo.toml  hello_db.db
session_3/db_access/migrations/: 20241111211501_init.sql
session_3/db_access/src/: main.rs
session_3/errors/: Cargo.toml
session_3/errors/src/: main.rs
session_3/hello_async/src/: main.rs
session_3/hello_tokio/: Cargo.toml
session_3/hello_tokio/src/: main.rs
session_3/logspan/: Cargo.toml
session_3/logspan/src/: main.rs
session_3/restclient/: Cargo.toml
session_3/restclient/src/: main.rs
session_3/web_service/: Cargo.toml
session_3/web_service/src/: main.rs
